# Calculator

./: CMakeLists.txt  main.cpp
components/: Calculator.cpp  Calculator.h  DownloadLibrary.cpp  DownloadLibrary.h  Evalue.cpp  Evalue.h  LoaderLibrary.cpp  LoaderLibrary.h  Parser.cpp  Parser.h
